# GeoSearchWithElasticsearch

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
elasticsearch/: Dockerfile
geo_search/: reverse-geocoding.py  setting.py
geo_search/test_data/: geojson.json
