[tool.poetry]
name = "geosearchwithelasticsearch"
version = "0.1.0"
description = ""
authors = ["yuta-ito <hal4030@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
geojson = "^2.5.0"
opensearch-py = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
